update for the day

--- a/stylesheet-pages.css
+++ b/stylesheet-pages.css
@@ -57,3 +57,13 @@ a:hover {}
   margin-top: 20vh;
   margin-left: 2vw;
 }
+
+.maracas1 {
+  margin-top: 130px;
+  margin-left: 70px;
+}
+
+.maracas2 {
+  margin-top: 0px;
+  margin-left: 600px;
+}
