--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   margin: 0;
   font-family: 'Catamaran', sans-serif;
@@ -26,8 +27,7 @@ a:link, a:visited {
   color: purple;
 }
 
-a:hover {
-}
+a:hover {}
 
 /* containers */
 * {
@@ -37,6 +37,7 @@ a:hover {
 body {
   margin: 0;
 }
+
 .total {
   width: 100%;
   height: 100vh;
@@ -45,9 +46,7 @@ body {
   align-items: center;
 }
 
-
 /* bench */
-
 .Bench {
   width: 20vw;
   position: absolute;
@@ -61,7 +60,6 @@ body {
 }
 
 /* billboard */
-
 .billboard {
   width: 25vw;
   position: absolute;
@@ -75,7 +73,6 @@ body {
 }
 
 /* broom */
-
 .broom {
   width: 20vw;
   position: absolute;
@@ -89,7 +86,6 @@ body {
 }
 
 /* maracas  */
-
 .maracas {
   width: 9vw;
   position: absolute;
@@ -98,12 +94,11 @@ body {
 }
 
 .maracas:hover {
-  transform: scale(1.1,1.1);
+  transform: scale(1.1, 1.1);
   transition: .5s ease;
 }
 
 /* Nails */
-
 .nails {
   width: 11vw;
   position: absolute;
@@ -117,7 +112,6 @@ body {
 }
 
 /* rocking */
-
 .rocking {
   width: 15vw;
   position: absolute;
@@ -131,7 +125,6 @@ body {
 }
 
 /* skirt */
-
 .skirt {
   width: 7vw;
   position: absolute;
@@ -145,7 +138,6 @@ body {
 }
 
 /* water */
-
 .water {
   width: 16vw;
   position: absolute;
@@ -154,13 +146,26 @@ body {
 }
 
 .water:hover {
-  transform: scale(1.1,1.1);
+  transform: scale(1.1, 1.1);
+  transition: .5s ease;
+}
+
+/* folder */
+.folder {
+  width: 6vw;
+  position: absolute;
+  left: 63vw;
+  top: 81vh;
+}
+
+.folder:hover {
+  transform: translateX(10px);
   transition: .5s ease;
 }
 
 @media screen and (max-width:600px) {
   html {
-    font-size:150%;
+    font-size: 150%;
   }
 
   body {
@@ -169,7 +174,7 @@ body {
   }
 
   .container {
-    flex-direction:column;
+    flex-direction: column;
   }
 
   .bench {
@@ -179,8 +184,7 @@ body {
 }
 
 @media screen and (max-width:600px) {
-  html{
-    font-size:200%;
+  html {
+    font-size: 200%;
   }
-
 }
