--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  cursor: url('cursor1.png'), auto;
+}
+
 body {
   margin: 0;
   font-family: 'Catamaran', sans-serif;
@@ -27,7 +31,9 @@ a:link, a:visited {
   color: purple;
 }
 
-a:hover {}
+a:hover {
+    cursor: url('cursor2.png'), auto;
+}
 
 /* containers */
 * {
