--- a/stylesheet-pages.css
+++ b/stylesheet-pages.css
@@ -308,7 +308,7 @@ body#spiral main {
      display: block;
    } */
 
-  body#rocking main, body#nails main, body#library main, body#bench main, body#billboard main, body#key main, body#frazada main, body#marracas main, body#spiral main
+  body#antennas main, body#rocking main, body#nails main, body#library main, body#bench main, body#billboard main, body#key main, body#frazada main, body#marracas main, body#spiral main
 
   {display: block}
 
