--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,7 @@ body {
   font-family: 'Catamaran', sans-serif;
   font-size: 14px;
   background-image: url('background-outline.png');
+  /* background-color: #9ea0a8; */
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
