--- a/stylesheet-pages.css
+++ b/stylesheet-pages.css
@@ -33,7 +33,8 @@ body#bench main {
   grid-template-columns: repeat(4, 1fr);
   grid-template-areas:
     "b1 b2 b3 ."
-    "b4 b5 b6 b7";
+    "b4 b5 b6 b7"
+    ". . . b8";
 }
 
 #bench img {
@@ -68,6 +69,17 @@ body#bench main {
 .b7 {
   grid-area: b7;
 }
+
+.b8 {
+  grid-area: b8;
+}
+
+/* .benchgif {
+  position: relative;
+  top: 60vh;
+  left: -5vw;
+  width: 23.8vw;
+} */
 
 #billboard img {
   margin: 0px;
