--- a/stylesheet-pages.css
+++ b/stylesheet-pages.css
@@ -8,25 +8,146 @@ html {
 
 body {
   margin: 0;
-  font-family: 'Catamaran', sans-serif;
-  font-size: 14px;
+  font-family: 'Hershey-Noailles-Times-Simplex-Light', serif;
+  font-size: 16px;
   background-color: rgb(0, 0, 0);
+}
+
+@font-face {
+  font-family: 'Hershey-Noailles-Times-Simplex-Light';
+  src: url('Hershey-Noailles-Times-Simplex-Light.otf');
+  font-weight: normal;
+  font-style: normal;
 }
 
 p {
   padding: 1em;
 }
 
-img, video {
+img,
+video {
   max-width: 100%;
 }
 
-a:link, a:visited {
+iframe {
+  width: 100vw;
+  height: 50vh;
+}
+
+a:link,
+a:visited {
   text-decoration: none;
   color: purple;
 }
 
 /* page styles */
+
+
+/* ceiling */
+
+body#ceiling main {
+  display: grid;
+  /* grid-template-columns: repeat(4, 1fr);
+  grid-template-areas:
+    "b1 b2 b3 ."
+    "b4 b5 b6 b7"
+    ". . . b8"; */
+}
+
+.video-container {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+.ceiling {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+}
+
+.grid-item {
+  padding: 0px;
+  width: auto;
+}
+
+.video {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.image1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.image2 {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.image3 {
+  grid-column: 3;
+  grid-row: 4;
+}
+
+.image4 {
+  grid-column: 1;
+  grid-row: 3;
+}
+
+.image5 {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.image6 {
+  grid-column: 3;
+  grid-row: 2;
+}
+
+.image7 {
+  grid-column: 2;
+  grid-row: 5;
+}
+
+.caption1 {
+  grid-column: 3;
+  grid-row: 1;
+}
+
+.caption2 {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.caption3 {
+  grid-column: 1;
+  grid-row: 5;
+}
+
+.caption4 {
+  grid-column: 3;
+  grid-row: 3;
+}
+
+.caption5 {
+  grid-column: 2;
+  grid-row: 4;
+}
+
+/* bench */
+
 body#bench main {
   margin: 20px;
   display: grid;
@@ -81,6 +202,8 @@ body#bench main {
   width: 23.8vw;
 } */
 
+/* billboard */
+
 #billboard img {
   margin: 0px;
   vertical-align: top;
@@ -128,6 +251,8 @@ body#frazada main {
   grid-area: f1;
 }
 
+/* maracas */
+
 #maracas video {
   margin: 0;
   vertical-align: top;
@@ -144,6 +269,8 @@ body#maracas main {
 .m1 {
   grid-area: m1;
 }
+
+/* nails */
 
 #nails video {
   margin: 0;
@@ -168,6 +295,8 @@ body#nails main {
 .n2 {
   grid-area: n2;
 }
+
+/* rockingchair */
 
 #rocking video {
   margin: 20;
@@ -195,6 +324,7 @@ body#rocking main {
   grid-area: r3;
 }
 
+/* key */
 
 #key img {
   margin: 20px;
@@ -202,12 +332,13 @@ body#rocking main {
 }
 
 body#key main {
-  margin: 20px;
+  margin: 5px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  column-gap: 20px;
+  column-gap: 10px;
   grid-template-areas:
-    ". k2 k1 .";
+    ". k2 k1 ."
+    ". caption7 caption6 .";
 }
 
 .k1 {
@@ -218,22 +349,45 @@ body#key main {
   grid-area: k2;
 }
 
-#library img video {
-  margin: 0px;
-  vertical-align: top;
+.caption6 {
+  grid-area: caption6;
+}
+
+.caption7 {
+  grid-area: caption7;
+}
+
+/* library */
+
+#library img,
+#library iframe {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: auto;
 }
 
 body#library main {
+  width: 100vw;
   margin: 0;
   justify-content: center;
   align-content: center;
   display: grid;
-  grid-column-gap: 15px;
   grid-row-gap: 10px;
   grid-template-areas:
     "l1 l3 l2"
     "l4 l5 l6";
+  grid-gap: 20px;
+}
 
+#library .row-item.l1 iframe,
+#library .row-item.l2 iframe,
+#library .row-item.l3 iframe {
+  width: 100%;
+  height: 300px;
+  padding: 0;
+  margin: 0;
 }
 
 .l1 {
@@ -257,8 +411,10 @@ body#library main {
 }
 
 .l6 {
-  grid-area: l6;
+  grid-area: l6
 }
+
+/* antennas */
 
 body#antennas main {
   margin: 0;
@@ -297,6 +453,8 @@ body#antennas main {
   grid-area: a6;
 }
 
+/* spiral */
+
 #spiral video {
   margin: 0px;
   vertical-align: middle;
@@ -314,18 +472,65 @@ body#spiral main {
   grid-area: k1;
 }
 
+/* mdpls */
+
+#MDPLS iframe {
+  display: block;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+
 
 /* media */
 
+@media only screen and (max-width: 600px) {
 
- @media only screen and (max-width: 600px) {
-
-   /* #library {
+  /* #library {
      display: block;
    } */
 
-  body#antennas main, body#rocking main, body#nails main, body#library main, body#bench main, body#billboard main, body#key main, body#frazada main, body#marracas main, body#spiral main
+  body#ceiling main,
+  body#railing main,
+  body#antennas main,
+  body#rocking main,
+  body#nails main,
+  body#library main,
+  body#bench main,
+  body#billboard main,
+  body#key main,
+  body#frazada main,
+  body#mdpls main,
+  body#maracas main,
+  body#spiral main {
+    display: block;
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+  }
 
-  {display: block}
+  .ceiling {
+    display: block;
+  }
 
- }
+  body#nails main {
+    display: block;
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+  }
+
+  .nails video {
+    display: block;
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+  }
+
+.keys img {
+  display: block;
+ 
+}
+
+}
