--- a/stylesheet-pages.css
+++ b/stylesheet-pages.css
@@ -21,7 +21,7 @@ body {
 }
 
 p {
-  padding: 1em;
+  padding: .8em;
 }
 
 img,
@@ -31,7 +31,6 @@ video {
 
 iframe {
   width: 100vw;
-  height: 50vh;
 }
 
 a:link,
@@ -60,7 +59,7 @@ body#ceiling main {
 }
 
 .video-container {
-  position: relative;
+  /* position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -71,7 +70,7 @@ body#ceiling main {
   z-index: 1;
   padding: 0;
   margin: 0;
-  border: 0;
+  border: 0; */
 }
 
 .ceiling {
@@ -81,11 +80,19 @@ body#ceiling main {
   grid-gap: 10px;
 }
 
+.video-container {
+  grid-column: 2 / 4;
+  grid-row: 1 / 3;
+}
+
 .grid-item {
   padding: 0px;
   width: auto;
+  align-items: left;
+  justify-content: left;;
 }
 
+/* 
 .video {
   grid-column: 1;
   grid-row: 1;
@@ -149,7 +156,7 @@ body#ceiling main {
 .caption5 {
   grid-column: 2;
   grid-row: 4;
-}
+} */
 
 /* bench */
 
@@ -332,18 +339,17 @@ body#rocking main {
 /* key */
 
 #key img {
-  margin: 20px;
-  vertical-align: top;
+  margin: px;
 }
 
 body#key main {
-  margin: 5px;
+  margin: ;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  column-gap: 10px;
+  grid-template-columns: 15vw 30vw 10vw 30vw 15vw;
   grid-template-areas:
-    ". k2 k1 ."
-    ". caption7 caption6 .";
+    " . . . . ."
+    ". k2 . k1 ."
+    ". caption7 . caption6 .";
 }
 
 .k1 {
@@ -487,6 +493,9 @@ body#spiral main {
   width: 100%;
 }
 
+.video-library {
+  height: 60vh;
+}
 
 /* media */
 
