--- a/stylesheet-pages.css
+++ b/stylesheet-pages.css
@@ -29,6 +29,30 @@ video {
   max-width: 100%;
 }
 
+.clickable-image {
+  max-width: 100%;
+  height: auto;
+  cursor: pointer;
+}
+
+.enlarged-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.enlarged-image img {
+  max-width: 80%;
+  max-height: 80%;
+  object-fit: contain;
+}
+
 iframe {
   width: 100vw;
 }
@@ -547,4 +571,11 @@ body#spiral main {
  
 }
 
+.clickable-image {
+  cursor: default;
+  pointer-events: none;
+  } */
+
 }
+
+
