--- a/stylesheet.css
+++ b/stylesheet.css
@@ -100,6 +100,14 @@ body {
   align-items: center;
 }
 
+/* Ibeam */
+.ibeam {
+  width: 4vw;
+  position: absolute;
+  left: 7vw;
+  top: 170px;
+}
+
 /* glass railing */
 .glassrailing {
   width: 20vw;
@@ -286,8 +294,8 @@ body {
 .spiral {
   width: 4vw;
   position: absolute;
-  left: 7vw;
-  top: 130px;
+  left: 164vw;
+  top: 13px;
 }
 
 .spiral:hover {
