--- a/stylesheet.css
+++ b/stylesheet.css
@@ -130,7 +130,7 @@ body {
 .door {
   width: 10vw;
   position: absolute;
-  left: 180vw;
+  left: 190vw;
   top: 180px;
 }
 
@@ -170,7 +170,7 @@ body {
   width: 25vw;
   position: absolute;
   top: 60vh;
-  left: 29vw;
+  left: 180vw;
 }
 
 .billboard:hover {
@@ -191,15 +191,15 @@ body {
   transition: .5s ease;
 }
 
-/* maracas  */
-.maracas {
-  width: 9vw;
+/* fence  */
+.fence {
+  width: 20vw;
   position: absolute;
-  top: 60vh;
-  left: 14vw;
+  top: 53vh;
+  left: 20vw;
 }
 
-.maracas:hover {
+.fence:hover {
   transform: scale(1.1, 1.1);
   transition: .5s ease;
 }
@@ -222,7 +222,7 @@ body {
   width: 15vw;
   position: absolute;
   top: 59vh;
-  left: 170vw;
+  left: 130vw;
 }
 
 .rocking:hover {
@@ -300,7 +300,7 @@ body {
   width: 4vw;
   position: absolute;
   left: 170vw;
-  top: 13px;
+  top: 130px;
 }
 
 .spiral:hover {
@@ -325,8 +325,8 @@ body {
 .MDPLS {
   width: 25vw;
   position: absolute;
-  top: 53vh;
-  left: 130vw;
+  top: 40vh;
+  left: 210vw;
 }
 
 .MDPLS:hover {
