--- a/stylesheet-pages.css
+++ b/stylesheet-pages.css
@@ -411,8 +411,8 @@ body#fence main {
   grid-column-gap: 15px;
   grid-row-gap: 10px;
   grid-template-areas:
-  "f1 f3 f4"
-  "f2 f5 f6";
+  ". f1 f4 ."
+  ". f2 f5 .";
 
 }
 
