--- a/stylesheet-pages.css
+++ b/stylesheet-pages.css
@@ -65,7 +65,7 @@ a:visited {
 }
 
 a:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 /* page styles */
@@ -75,15 +75,15 @@ a:hover {
 
 body#ceiling main {
   display: grid;
-  /* grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-template-areas:
     "b1 b2 b3 ."
     "b4 b5 b6 b7"
-    ". . . b8"; */
+    ". . . b8";
 }
 
 .video-container {
-  /* position: relative;
+  position: relative;
   top: 0;
   left: 0;
   width: 100%;
@@ -94,9 +94,52 @@ body#ceiling main {
   z-index: 1;
   padding: 0;
   margin: 0;
-  border: 0; */
+  border: 0;
 }
 
+.ceiling {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+}
+
+.video-container {
+  grid-column: 2 / 4;
+  grid-row: 1 / 3;
+}
+
+.grid-item {
+  padding: 0px;
+  width: auto;
+  align-items: left;
+  justify-content: left;
+  ;
+}
+
+
+/* securitybar */
+
+#securitybar img {
+  margin: px;
+}
+
+body#securitybar main {
+  margin: 20px;
+  display: grid;
+  grid-template-columns: 33vw 33vw 33vw;
+  grid-template-areas:
+    ". i1 ."
+    ". i2 ."
+}
+
+.i1 {
+  grid-area: i1;
+}
+
+.i2 {
+  grid-area: i2;
+}
 
 /* ibeam */
 
@@ -110,9 +153,9 @@ body#ibeam main {
   display: grid;
   grid-template-columns: 33vw 33vw 33vw;
   grid-template-areas:
-   ". i1 ."
-   ". i2 ."
-   ". . ."
+    ". i1 ."
+    ". i2 ."
+    ". . ."
 }
 
 .i1 {
@@ -136,8 +179,8 @@ body#glassrailing main {
   grid-template-columns: 33vw 33vw 33vw;
   grid-template-areas:
     "gr1 . grcaption7"
-     "gr2 . grcaption6"
-     "gr3 gr4 gr5";
+    "gr2 . grcaption6"
+    "gr3 gr4 gr5";
 }
 
 .gr1 {
@@ -204,92 +247,33 @@ body#door main {
   grid-area: dcaption1;
 }
 
+/* long fence */
 
+/* #longfence img {
+  margin: px;
+}
 
-.ceiling {
-  position: relative;
+body#longfence main {
+  margin: 20px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
+  grid-template-columns: 15vw 30vw 10vw 30vw 15vw;
+  grid-template-areas:
+    " f1 f1 f1 f2 f2"
+    "f3 . . . .";
 }
 
-.video-container {
-  grid-column: 2 / 4;
-  grid-row: 1 / 3;
+.longfence1 {
+  grid-area: f1;
 }
 
-.grid-item {
-  padding: 0px;
-  width: auto;
-  align-items: left;
-  justify-content: left;;
+.longfence2 {
+  grid-area: f2;
 }
 
-/* 
-.video {
-  grid-column: 1;
-  grid-row: 1;
-}
-
-.image1 {
-  grid-column: 1;
-  grid-row: 1;
-}
-
-.image2 {
-  grid-column: 2;
-  grid-row: 1;
-}
-
-.image3 {
-  grid-column: 3;
-  grid-row: 4;
-}
-
-.image4 {
-  grid-column: 1;
-  grid-row: 3;
-}
-
-.image5 {
-  grid-column: 2;
-  grid-row: 2;
-}
-
-.image6 {
-  grid-column: 3;
-  grid-row: 2;
-}
-
-.image7 {
-  grid-column: 2;
-  grid-row: 5;
-}
-
-.caption1 {
-  grid-column: 3;
-  grid-row: 1;
-}
-
-.caption2 {
-  grid-column: 1;
-  grid-row: 2;
-}
-
-.caption3 {
-  grid-column: 1;
-  grid-row: 5;
-}
-
-.caption4 {
-  grid-column: 3;
-  grid-row: 3;
-}
-
-.caption5 {
-  grid-column: 2;
-  grid-row: 4;
+.longfence3 {
+  grid-area: f3;
 } */
+
 
 /* bench */
 
@@ -378,6 +362,8 @@ body#billboard main {
   grid-area: c4;
 }
 
+/* frazada */
+
 #frazada video {
   margin: 0;
   vertical-align: top;
@@ -411,8 +397,8 @@ body#fence main {
   grid-column-gap: 15px;
   grid-row-gap: 10px;
   grid-template-areas:
-  ". f1 f4 ."
-  ". f2 f5 .";
+    ". f1 f4 ."
+    ". f2 f5 .";
 
 }
 
@@ -659,10 +645,6 @@ body#spiral main {
 
 @media only screen and (max-width: 600px) {
 
-  /* #library {
-     display: block;
-   } */
-  
   body#ibeam main,
   body#glassrailing main,
   body#door main,
@@ -703,14 +685,15 @@ body#spiral main {
     max-width: 100%;
   }
 
-.keys img {
-  display: block;
- 
-}
+  .keys img {
+    display: block;
 
-.clickable-image {
-  cursor: default;
-  pointer-events: none;
-  } */
+  }
 
+  .clickable-image {
+    cursor: default;
+    pointer-events: none;
+  }
+
+  */
 }
